faculty on mobile fix responsive

--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -349,4 +349,15 @@ body {
         max-width: 100%;
         height: auto;
     }
+
+    .faculty {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .faculty .titles {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
 }
